fix jsn notice-panel z-index

--- a/src/conferences/jsn/sass/partials/_notice-panel.sass
+++ b/src/conferences/jsn/sass/partials/_notice-panel.sass
@@ -1,5 +1,5 @@
 .notice-panel
-	z-index: 9
+	z-index: 11
 	position: fixed
 	left: 0
 	right: 0
